fix list overflow

--- a/src/scss/compositions/_gallery.scss
+++ b/src/scss/compositions/_gallery.scss
@@ -9,7 +9,9 @@
   align-items: center;
 
   li {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   a {
     display: flex;
@@ -18,18 +20,24 @@
     margin: 0 calc(var(--seed) * 1rem + 1rem);
     padding-bottom: 1rem;
     box-shadow: inset 0 0 0 1rem var(--color-bg);
+    max-width: calc(var(--seed) * 50px + 200px);
+  }
+  picture {
+    padding: 1rem;
+    padding-top: 1.5rem;
+    transition: padding ease-in-out 0.2s;
   }
   img {
-    max-width: calc(var(--seed) * 50px + 200px);
-    margin: 1rem;
-    margin-top: 1.5rem;
+    // margin: 1rem;
+    // margin-top: 1.5rem;
     background-color: white;
     padding: 7px;
     border: 2px solid #{get-color("shade")};
-    transition: margin ease-in-out 0.2s;
+    // transition: margin ease-in-out 0.2s;
   }
 
   h2 {
+    max-width: 100%;
     text-align: center;
     font: var(--font-caption);
     color: var(--color-text);
@@ -40,9 +48,13 @@
     background-color: var(--color-accent-shade);
     box-shadow: inset 0 0 0 0 var(--color-bg);
 
+    picture {
+      padding-top: 1rem;
+      padding-bottom: 1.5rem;
+    }
     img {
-      margin-top: 1rem;
-      margin-bottom: 1.5rem;
+      // margin-top: 1rem;
+      // margin-bottom: 1.5rem;
       border-color: var(--color-accent);
     }
   }
@@ -76,8 +88,6 @@
   }
 
   .scale-2 {
-    img {
-      max-width: calc(var(--seed) * 50px + 400px);
-    }
+    max-width: min(calc(var(--seed) * 50px + 400px), 100%);
   }
 }
